--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "isolations-hjalpen",
   "version": "0.0.1",
   "description": "Hack the Crisis Sweden prototype for matchmaking",
-  "main": "index.js",
+  "main": "express.js",
   "scripts": {
-    "start": "react-scripts build; node index.js",
+    "start": "deployment.sh",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,7 +34,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/ErikLarsson82/isolations-hjalpen#readme",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
