--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "isolations-hjalpen",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Hack the Crisis Sweden prototype for matchmaking",
-  "main": "express.js",
+  "main": "index.js",
   "scripts": {
-    "start": "deployment.sh",
+    "start": "react-scripts build",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
