--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/user-event": "^7.2.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "google-maps-react": "^2.0.2",
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
