--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "isolations-hjalpen",
   "version": "0.0.2",
   "description": "Hack the Crisis Sweden prototype for matchmaking",
-  "main": "-",
+  "main": "express.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run build && node express.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,6 +41,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "google-maps-react": "^2.0.2",
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
