Remove so much crap like you wouldnt beleive it. No more create-react-app and manual webpack build

--- a/package.json
+++ b/package.json
@@ -1,45 +1,25 @@
 {
-  "name": "isolations-hjalpen",
-  "version": "0.0.2",
-  "description": "Hack the Crisis Sweden prototype for matchmaking",
+  "name": "grannleveransen",
+  "version": "0.0.3",
+  "description": "Hack the Crisis Sweden prototype for matchmaking helpers and needers",
   "main": "express.js",
   "scripts": {
     "start": "npm run build && node express.js",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "webpack",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ErikLarsson82/isolations-hjalpen.git"
+    "url": "git+https://github.com/ErikLarsson82/grannleveransen.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ErikLarsson82/isolations-hjalpen/issues"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "url": "https://github.com/ErikLarsson82/grannleveransen/issues"
   },
   "homepage": "http://grannleveransen.se",
   "dependencies": {
     "@material-ui/core": "^4.9.9",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "google-maps-react": "^2.0.2",
@@ -47,6 +27,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "webpack": "^4.42.1"
   }
 }
